# Xdemand

./: .cursor_ignore  .dockerignore  .gitignore  README.md  config.py  pyproject.toml  requirements-xiom.txt  requirements.txt
common/: azure.py  cache_manager.py  cache_manager_joblib.py  data_fetcher.py  db_connection.py  get_db_tables.py  local_constants.py  logger_.py  pickle_cache.py  scientific_python_setup.py  string_utils.py  test_prophet.py
config/: price_recommender.yaml  price_sensing_direct.yaml  sales_forecast_pipeline.yaml  stock_status_forecast.yaml  torch_mlp.yaml
docker_files/: Dockerfile-reviews  Dockerfile-sales  Dockerfile-stocks-pr  Dockerfile-xiom  deploy_pipeline_containers_az_cli.sh  docker-compose-reviews.yaml  docker-compose-sales.yaml  docker-compose-stocks-pr.yaml  docker-compose-stocks_pr.yaml  docker-compose-xiom-experimental.yml  docker-compose-xiom.yml
docs/: price_elasticity_ST_adjusted.md  price_elasticity_ST_adjusted_business.md  price_recommendation.tex
mltools/: stockout_detection.ipynb
mltools/research/langchain/plotly/: langchain_agent_with_memory.py
research/langchain/plotly/: dynamic_data_graphs.py  langchain_agent_with_memory.py
research/legacy_code/sql/: stock_status_issues.sql
scripts/: run_reviews.py  run_sales.py  run_stock_pr.py  sales_pipelines.py  stock_pr_pipeline.py
tests/scientic_python/: test_scientific_python_setup.py
xdemand/pipelines/: sales_pipeline.py  utils.py
xdemand/pipelines/RDX/: index_reviews.py  sales_pipelines.py  stock_pr_pipeline.py
xdemand/pipelines/RDX/index_reviews/: build_chroma.py
xdemand/pipelines/RDX/price_recommender/: optuna_optimizer.py  optuna_trials.py  pr_utils.py  price_optimizer.py  price_recommender.py
xdemand/pipelines/RDX/price_sensing/: elasticity_log_ST_adjusted.py  price_elasticity_calculator.py  price_sensing_direct.py  price_sensor.py  ps_utils.py
xdemand/pipelines/RDX/sales_forecast/: execute_preprocessing_sql.py  forecast_utils.py  porphet_forecaster.py  prophet_training_pipeline.py
xdemand/pipelines/RDX/sku_warehouse_info/: sku_warehouse_info.py
xdemand/pipelines/RDX/stock_status_forecast/: stock_status_forecast.py  stock_status_utils.py
xdemand/pipelines/RDX/stockout_detection/: stockout_detection.py  stockout_detection_utils.py
xdemand/pipelines/RDX/stockout_detections/: stockout_detection.py
xdemand/preprocessing/RDX/: ABT_preprocessing.py
xdemand/preprocessing/RDX/sql/: aggregated_views.sql  (+1 more)
xdemand/torch_mlp_models/: compare_base_models.py  log_edge_cases.py  mlp_trainer.py  one_hot_encoder.py  self_attention.py  torch_base_model.py  torch_mlp_prev_week_bypass.py  torch_mlp_xl.py  torch_utils.py  trainer_result.py
xiom_optimized/: README.md  agent_running_stock.py  app_config_initial.py  app_layout.py  ask_ai_utils.py  cache_manager.py  caching.py  chat_agent.py  custom_callback.py  data_fetcher.py  env_file.env  index.py  utils.py
xiom_optimized/ask_ai_utils/: agent_executor_custom_call_backs.py  agent_running_stock.py  agents.py  ask_ai_utils.py  chat_agent_custom_callback.py  dangerous_code.py  prompts.py
xiom_optimized/assets/: style.css
xiom_optimized/dash_callbacks/: ask_ai_callbacks.py  data_chooser_callbacks.py  demand_analysis_callbacks.py  demand_forecasting_callbacks.py  explain_ai_callbacks.py  inventory_planning_callbacks.py  price_sensing_callbacks.py  product_research_callbacks.py  stock_sensing_callbacks.py  stockouts_past_callbacks.py
xiom_optimized/langchain_utils/: agents.py  dangerous_code.py  graph_exlainer.py  prompt_news.py  prompts.py
xiom_optimized/page_callbacks/: ask_ai_callbacks.py  demand_analysis_callbacks.py
xiom_optimized/pages/: ask_ai.py  ask_ai_callbacks.py  data_chooser.py  data_chooser_callbacks.py  data_upload.py  demand_analysis.py  demand_analysis_callbacks.py  demand_analysis_callbacks_with_data_chooser.py  demand_forecasting.py  demand_forecasting_callbacks.py  home.py  price_sensing.py  price_sensing_callbacks.py  product_research.py  product_research_callbacks.py  profile.py  progress_bar.py  stock_sensing.py  stock_sensing_callbacks.py  stockouts_past_callbacks.py
xiom_optimized/tabs/: ask_ai.py  data_chooser.py  data_upload.py  demand_analysis.py  demand_forecasting.py  home.py  inventory_planning.py  price_sensing.py  product_research.py  profile.py  progress_bar.py  stock_sensing.py
xiom_optimized/utils/: cache_manager.py  config_constants.py  data_fetcher.py  utils.py
(+4 files in other folders)
