[tool.poetry]
name = "Xdemand"
version = "0.1.0"
description = "Data Preprocessing and pipelines for Xdemand"
authors = ["Ahmed Jawad <jawwada@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.*"
plotly = "5.23.0"
flask = "2.0.1"
pandas = "2.0.3"
gunicorn = "20.1.0"
scikit-learn = "1.2.2"
Flask-Login = "0.5.0"
flask_caching = "2.0.2"
werkzeug = "2.0.1"
dash = "2.14.1"
dash_table = "^5.0.0"
dash_auth = "^1.4.1"
sqlalchemy = "2.0.23"
chart_studio = "1.1.0"
dash_bootstrap_components = "1.6.0"
torch = ">=2.2.1"
matplotlib = "3.7.1"
azure-storage-blob = "*"
numpy = "1.23.5"
joblib = "1.2.0"
pandasql = "0.7.3"
seaborn = "0.13.2"
pytz = "2023.3"
fastdtw = "0.3.4"
python-dateutil = "2.8.2"
dynaconf = "^3.2.5"
xgboost = "2.1.1"
neuralprophet = { version = "*", extras = ["live"] }
mlxtend = "0.22.0"
prophet = "1.1.5"
holidays = "0.50"
redis = "4.5.5"
langchain = "^0.2.12"
langchain_experimental = "0.0.64"
tabulate = "0.8.10"
statsmodels = "*"
openai = "^1.38.0"
langchain-openai = "^0.1.20"
optuna = "^3.6.1"
diskcache = "^5.6.3"
dash-ag-grid = "^31.2.0"
langchain-groq = "^0.1.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"