[tool.poetry]
name = "Xdemand"
version = "0.1.0"
description = "Data Preprocessing and pipelines for Xdemand"
authors = ["Ahmed Jawad <jawwada@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10.dev0"
pandas = "2.0.3"
werkzeug = "2.0.1"
sqlalchemy = "2.0.32"
azure-storage-blob = "*"
numpy = "1.23.5"
pandasql = "0.7.3"
pytz = "2023.3"
python-dateutil = "2.8.2"
dynaconf = "3.2.6"
mlxtend = "0.22.0"
tabulate = "0.8.10"
openai = "1.40.6"
langchain-openai = "0.1.21"
pyodbc = "5.0.1"
typer = "^0.12.4"
chromadb = "^0.5.5"
argostranslate = "^1.9.6"
opentelemetry-exporter-otlp-proto-grpc="1.25.0"
torch = [
    {url = "https://download.pytorch.org/whl/cpu/torch-2.2.1%2Bcpu-cp39-cp39-linux_x86_64.whl", markers = "sys_platform == 'linux'"},
    {url = "https://download.pytorch.org/whl/cpu/torch-2.2.1-cp39-none-macosx_11_0_arm64.whl", markers = "sys_platform == 'darwin' and platform_machine == 'arm64'"},
    {url = "https://download.pytorch.org/whl/cpu/torch-2.2.1-cp39-none-macosx_10_9_x86_64.whl", markers = "sys_platform == 'darwin' and platform_machine == 'x86_64'"}
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"